--- a/TasksEvaluation/appsettings.json
+++ b/TasksEvaluation/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConfig": "Server=DESKTOP-DG0007O\\SQLEXPRESS;Database=TaskEvaluationTable;Trusted_Connection=True;TrustServerCertificate=True;"
+    "MyConfig": "Server=db4324.public.databaseasp.net; Database=db4324; User Id=db4324; Password=Z!d74A=gMp8_; Encrypt=False; MultipleActiveResultSets=True;"
   }
 }
