--- a/TasksEvaluation/TasksEvaluation.csproj
+++ b/TasksEvaluation/TasksEvaluation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -25,6 +25,10 @@
   <ItemGroup>
     <ProjectReference Include="..\TasksEvaluation.Core\TasksEvaluation.Core.csproj" />
     <ProjectReference Include="..\TasksEvaluation.Infrastructure\TasksEvaluation.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
