add forget , reset

--- a/TasksEvaluation/appsettings.json
+++ b/TasksEvaluation/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyConfig": "Server=db4324.public.databaseasp.net; Database=db4324; User Id=db4324; Password=Z!d74A=gMp8_; Encrypt=False; MultipleActiveResultSets=True;",
-    "TasksEvaluationContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TasksEvaluation;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TasksEvaluationContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TasksEvaluation;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=TasksEvaluation;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
