--- a/TasksEvaluation/TasksEvaluation.csproj
+++ b/TasksEvaluation/TasksEvaluation.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Account\ForgotPassword.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.4" />
@@ -26,6 +30,18 @@
   <ItemGroup>
     <ProjectReference Include="..\TasksEvaluation.Core\TasksEvaluation.Core.csproj" />
     <ProjectReference Include="..\TasksEvaluation.Infrastructure\TasksEvaluation.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Account\ForgotPassword.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Account\ForgotPassword.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Account\ForgotPassword.cshtml" />
   </ItemGroup>
 
 </Project>
