--- a/TasksEvaluation/appsettings.json
+++ b/TasksEvaluation/appsettings.json
@@ -1,5 +1,13 @@
 {
 
+  "MailSettings": {
+    "Email": "eslamabdelmawgoud11@gmail.com",
+    "DisplayName": "TaskEvaluation",
+    "Password": "g s k v n y s j q f r t v k o v",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
+
 
   "Logging": {
     "LogLevel": {
