Update emailSender json

--- a/TasksEvaluation/appsettings.json
+++ b/TasksEvaluation/appsettings.json
@@ -1,11 +1,11 @@
 {
 
   "MailSettings": {
-    "Email": "eslamabdelmawgoud11@gmail.com",
+    "Email": "alyhani1012@gmail.com",
     "DisplayName": "TaskEvaluation",
-    "Password": "g s k v n y s j q f r t v k o v",
+    "Password": "wufq pxhz ljhd wtdb",
     "Host": "smtp.gmail.com",
-    "Port": 587
+    "Port": 465
   },
 
 
